	unsigned" warning in an assertion.

	* .cvsignore, CMakeLists.txt, Makefile.in, configure.ac: Updated to
	follow toplevel directory cleanup.

	* admin/.cvsignore, admin/.indent.pro, admin/openal-config.in,
	admin/openal.pc.in: Added.

	* .indent.pro, openal-config.in, openal.pc.in: Removed.

2005-11-21  Prakash Punnoor <prakash@punnoor.de>

	* src/mixaudio16.c: fix NDEBUG related stuff

	* CMakeLists.txt: add debug stuff; make options names shorter

	* INSTALL.cmake: update status; more ccmake info;
	merged to INSTALL; removed

	* INSTALL: merged INSTALL.cmake

	* CMakeModules/CMakeASMCompiler.cmake.in,
	CMakeModules/CMakeASMInformation.cmake,
	CMakeModules/CMakeDetermineASMCompiler.cmake: moved

	* admin/CMakeModules/CMakeASMCompiler.cmake.in,
	admin/CMakeModules/CMakeASMInformation.cmake,
	admin/CMakeModules/CMakeDetermineASMCompiler.cmake: added

2005-11-20  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt, CMakeModules/CMakeASMCompiler.cmake.in,
	CMakeModules/CMakeASMInformation.cmake,
	CMakeModules/CMakeDetermineASMCompiler.cmake, INSTALL.cmake: preliminary
	CMake support


2005-11-19  Prakash Punnoor <prakash@punnoor.de>

	* configure.ac: Put back AC_PROG_CXX, as it is needed for testcase
	
	* src/al_siteconfig.h, src/Makefile.in, test/Makefile.in: don't include
	via "../config.h"; add .. to includes

2005-11-18  Sven Panne  <sven.panne@aedion.de>

	* src/al_buffer.c, src/al_ext.c: Cleaned up buffer state handling.

	* src/al_bpool.h, src/al_buffer.h, src/al_debug.h, src/al_error.h,
	src/al_ext.h, src/al_filter.h, src/al_listen.h, src/al_main.h,
	src/al_mixer.h, src/al_mixfunc.h, src/al_mixmanager.h, src/al_mspool.h,
	src/al_queue.h, src/al_rctree.h, src/al_rcvar.h, src/al_source.h,
	src/al_spool.h, src/al_threadlib.h, src/al_vector.h, src/mixaudio16.h,
	src/alc/alc_context.h, src/alc/alc_device.h, src/alc/alc_error.h,
	src/alc/alc_speaker.h: Started to remove the repetition of function